BOLT-22321 Fixed left margin of search input on mobile

--- a/app/styles/v2/Vivanuncios/partials/components/searchbarV2/_searchbarV2.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/searchbarV2/_searchbarV2.scss
@@ -68,7 +68,7 @@ $mobileTypingTextboxWidth: 84%;
 	.search-bar {
 		z-index: 4;
 		width: 90%;
-		margin: 0 auto;
+		margin: 0 10px;
 		position: relative;
 		box-sizing: border-box;
 
